# memory-magic

./: Cargo.toml  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  (+1 more)
implementors/memory_magic/: trait.ZeroInit.js
memory_magic/: all.html  index.html  sidebar-items.js  struct.Error.html  struct.Mirror.html  trait.ZeroInit.html
memory_magic/error/: struct.Error.html
memory_magic/mirror/: struct.Mirror.html
memory_magic/raw/: enum.ReadPermissions.html  enum.WritePermissions.html  fn.map.html  fn.map_multiple.html  fn.map_multiple_mut.html  fn.map_mut.html  fn.unmap.html  index.html  sidebar-items.js  struct.FileOptions.html  struct.FilePermissions.html  struct.Length.html  struct.Object.html  struct.Offset.html  struct.View.html  struct.ViewMut.html
memory_magic/view/: enum.ReadPermissions.html  enum.WritePermissions.html  index.html  sidebar-items.js  struct.FileOptions.html  struct.FilePermissions.html  struct.Length.html  struct.Object.html  struct.Offset.html  struct.View.html  struct.ViewMut.html
memory_magic/zero_init/: trait.ZeroInit.html
src/: error.rs  handle.rs  lib.rs  mirror.rs  raw.rs  unix.rs  view.rs  windows.rs  zero_init.rs
src/mapping/: mod.rs  unix.rs  windows.rs
src/memory_magic/: error.rs.html  lib.rs.html  mirror.rs.html  raw.rs.html  unix.rs.html  view.rs.html  zero_init.rs.html
src/raw/: unix.rs  view.rs  windows.rs
(+31 files in other folders)
