[package]
name = "memory-magic"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1"

[target.'cfg(unix)'.dependencies]
nix = "0.19"
shm_open_anonymous = { git = "https://github.com/calebzulawski/shm_open_anonymous.git" }

[target.'cfg(windows)'.dependencies]
# Must use the std feature, otherwise c_void has incorrect repr and pointer arithmetic doesn't work
# https://github.com/retep998/winapi-rs/issues/950
winapi = { version = "0.3", features = ["std", "winbase", "winnt", "handleapi", "sysinfoapi", "errhandlingapi", "memoryapi", "winerror"] }
num-traits = "0.2"
