[package]
name = "memory-magic"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
once_cell = { version = "1.7", default-features = false, features = ["race"] }

[target.'cfg(unix)'.dependencies]
shm_open_anonymous = "1"
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
# Must use the std feature, otherwise c_void has incorrect repr and pointer arithmetic doesn't work
# https://github.com/retep998/winapi-rs/issues/950
winapi = { version = "0.3", features = ["winbase", "winnt", "handleapi", "sysinfoapi", "errhandlingapi", "memoryapi", "winerror"] }
num-traits = { version = "0.2", default-features = false }
